feat: PerformanceImpact config annotation